--- a/config-sample.json
+++ b/config-sample.json
@@ -1,14 +1,14 @@
 {
-	"token": "telegramtoken",
+	"token": "Cryptowave",
 	"rpc": {
-		"host": "127.0.0.1",
-		"port": 6969,
+		"host": "139.99.193.84",
+		"port": 39044,
 		"user": "user",
 		"password": "password"
 	},
 	"mongo": {
 		"host": "localhost",
 		"port": 27017,
-		"db": "rpitipbot"
+		"db": "cwvtipbot"
 	}
 }
